--- a/.github/workspace/main.yml
+++ b/.github/workspace/main.yml
@@ -7,3 +7,9 @@ jobs:
   build:
     name: Build APK
     runs-on: macos-latest
+    steps:
+      - uses: actions/checkout@v1
+      - uses: actions/setup-java@v1
+        with:
+          java-version: '12.x'
+      - uses: subosito/flutter-action@v1
