--- a/.github/workspace/main.yml
+++ b/.github/workspace/main.yml
@@ -13,3 +13,13 @@ jobs:
         with:
           java-version: '12.x'
       - uses: subosito/flutter-action@v1
+        with:
+          flutter-version: '2.10.x'
+      - run: flutter pub get
+      - run: flutter build apk -t lib/main_prod.dart --split-per-abi
+      - run: Release apk
+        uses: ncipollo/release-action@v1
+        with:
+          artifacts: build/app/outputs/apk/release/*.apk
+          token: ${{secrets.TOKEN}}
+
