--- a/lefthook.yml
+++ b/lefthook.yml
@@ -9,3 +9,5 @@ pre-commit:
     pretty:
       glob: '*.dart'
       run: flutter format {staged_files} && git add {staged_files}
+    linter:
+      run: flutter analyze
