--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,11 +22,11 @@ jobs:
         with:
           flutter-version: '2.10.3'
       - run: flutter pub get
-      - run: flutter build apk --debug --split-per-abi
+      - run: flutter build apk -t lib/main_prod.dart --split-per-abi
       - name: Push to Releases
         uses: ncipollo/release-action@v1
         with:
-          artifacts: "build/app/outputs/apk/debug/*"
+          artifacts: build/app/outputs/apk/release/*.apk
           tag: v1.0.${{ github.run_number }}
           token: ${{ secrets.TOKEN }}
 
