--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
         with:
           flutter-version: '2.10.3'
       - run: flutter pub get
-      - run: flutter build apk -t lib/main_prod.dart --split-per-abi
+      - run: flutter build apk -t lib/main.dart --split-per-abi
       - name: Push to Releases
         uses: ncipollo/release-action@v1
         with:
