--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,7 @@
 on:
-  pull_request:
-    branches:
-      - main
-      - master
   push:
+    tags:
+      - "v*"
     branches:
       - main
       - master
@@ -13,20 +11,36 @@ jobs:
   build:
     name: Build & Release APK
     runs-on: macos-latest
+    env:
+      KEY_JKS: ${{ secrets.KEY_JKS }}
+      KEY_PATH: “/Users/macbook/Downloads/upload-keystore.jks”
+      KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
+      ALIAS_PASSWORD: ${{ secrets.ALIAS_PASSWORD }}
     steps:
       - uses: actions/checkout@v1
       - uses: actions/setup-java@v1
         with:
           java-version: '12.x'
+      - name: Create key file
+        run: echo $KEY_JKS | base64 -di > upload-keystore.jks
       - uses: subosito/flutter-action@v1
         with:
           flutter-version: '2.10.3'
       - run: flutter pub get
-      - run: flutter build apk --release --split-per-abi
+      - run: flutter build apk — release — split-per-abi
+      - run: flutter build appbundle
       - name: Push to Releases
         uses: ncipollo/release-action@v1
         with:
-          artifacts: "build/app/outputs/apk/release/*"
+          artifacts: "build/app/outputs/apk/release/*.apk,build/app/outputs/bundle/release/app-release.aab"
           tag: v1.0.${{ github.run_number }}
           token: ${{ secrets.TOKEN }}
+      commit:
+        - name: Upload app bundle artifact
+          uses: actions/upload-artifact@v2
+          with:
+            name: appbundle
+            path: build/app/outputs/bundle/release/app-release.aab
+
+
 
