--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: macos-latest
     env:
       KEY_JKS: ${{ secrets.KEY_JKS }}
-      KEY_PATH: “/Users/macbook/Downloads/upload-keystore.jks”
+      KEY_PATH: "/Users/macbook/Downloads/upload-keystore.jks"
       KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
       ALIAS_PASSWORD: ${{ secrets.ALIAS_PASSWORD }}
     steps:
