--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -69,6 +69,11 @@ android {
             signingConfig signingConfigs.release
         }
     }
+
+    lintOptions {
+        abortOnError true
+    }
+
 }
 
 flutter {
@@ -77,5 +82,5 @@ flutter {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'com.android.billingclient:billing:3.0.0'
+    implementation 'com.android.billingclient:billing:5.0.0'
 }
