--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -58,9 +58,9 @@ android {
 
     signingConfigs {
         release {
-            storeFile file('/Users/macbook/Downloads/upload-keystore.jks')
             keyAlias keystoreProperties['keyAlias']
             keyPassword keystoreProperties['keyPassword']
+            storeFile keystoreProperties['storeFile'] ? file(keystoreProperties['storeFile']) : null
             storePassword keystoreProperties['storePassword']
         }
     }
