--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,28 +2,81 @@ on:
   push:
     branches:
       - main
+  workflow_dispatch:
+
 name: "Build & Release"
+
+env:
+  FLUTTER_CHANNEL: 'stable' # 'stable', 'beta', or 'master', default to: 'stable'
+  FLUTTER_VERSION: '3.0.0'
+  PATH_TO_AAB: 'build/app/outputs/bundle/release/app-release.aab'
+  ANDROID_PACKAGE_NAME: 'io.roley.demo'
+
+
 jobs:
-  check-bats-version:
+  code-analysis-and-testing:
     name: Build & Release APK
     runs-on: macos-latest
     steps:
-      - uses: actions/checkout@v1
-      - uses: actions/setup-java@v1
+      - name: Checkout Repository
+        uses: actions/checkout@v3
+
+      - name: Set up Java
+        uses: actions/setup-java@v1
         with:
           java-version: '12.x'
-      - uses: subosito/flutter-action@v2
+
+      - name: Set up Flutter
+        uses: subosito/flutter-action@v2
         with:
           flutter-version: '2.10.3'
-      - run: flutter pub get
-      - run: flutter build apk
-      - run: flutter build appbundle
-      - name: Push to Releases
-        uses: ncipollo/release-action@v1
+
+      - name: Get pub dependencies
+        run: flutter pub get
+
+      - name: Flutter analyze
+        run: flutter analyze
+
+  android:
+    name: Android CI/CD
+    needs: code-analysis-and-testing
+    runs-on: macos-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Prepare key.jks & key.properties files
+        env:
+          KEYSTORE_FILE: ${{ secrets.KEYSTORE_FILE }}
+          KEY_PROPERTIES_FILE: ${{ secrets.KEY_PROPERTIES_FILE }}
+        run: |
+          echo "Convert key base64 string to a file"
+          echo "$KEYSTORE_FILE" >> key.jks.base64
+          base64 --decode key.jks.base64 > key.jks
+          echo "Convert key.properties secret string to a file"
+          echo "$KEY_PROPERTIES_FILE" >> key.properties
+        working-directory: 'android/'
+
+      - name: Set up Flutter
+        uses: subosito/flutter-action@v2
         with:
-          artifacts: "build/app/outputs/apk/release/*.apk,build/app/outputs/bundle/release/app-release.aab"
-          tag: v1.0.${{ github.run_number }}
-          token: ${{ secrets.TOKEN }}
+          flutter-version: '2.10.3'
+
+      - name: Flutter doctor
+        run: flutter doctor
+
+      - name: Build AAB
+        run: flutter build appbundle --release
+
+      - name: Upload AAB artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: release-aab
+          path: ${{ env.PATH_TO_AAB }}
+
+      - name: Upload to Play Store
+        run: |
+          fastlane supply --aab ${{ env.PATH_TO_AAB }} --json_key_data '${{ secrets.ANDROID_SERVICE_ACCOUNT_JSON }}' --package_name '${{ env.ANDROID_PACKAGE_NAME }}' --track 'internal'
 
 
 
