--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,15 +50,20 @@ jobs:
           KEYSTORE_FILE: ${{ secrets.KEYSTORE_FILE }}
           KEY_PROPERTIES_FILE: ${{ secrets.KEY_PROPERTIES_FILE }}
         run: |
-          echo "Convert key base64 string to a file"
+          echo "Convert key base64 string to a file KEYSTORE_FILE"
           echo "$KEYSTORE_FILE" >> key.jks.base64
-          echo "Convertion Completed $KEYSTORE_FILE"
-          echo "KEY_PROPERTIES_FILE" >> key.properties.base64
+          echo "Convertion Completed KEYSTORE_FILE"
+
+          echo "Convert key base64 string to a file KEY_PROPERTIES_FILE"
+          echo "$KEY_PROPERTIES_FILE" >> key.properties.base64
           echo "Convertion Completed KEY_PROPERTIES_FILE"
-          base64 --decode key.jks.base64 > key.jks
+
           echo "Convert key.jks secret string to a file"
-          base64 --decode key.properties.base64 > key.properties
+          base64 --decode key.jks.base64 > key.jks
+
           echo "Convert key.properties secret string to a file"
+          base64 --decode key.properties.base64 > key.properties
+
         working-directory: 'android/'
 
       - name: Set up Flutter
