--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,6 @@ env:
   PATH_TO_AAB: 'build/app/outputs/bundle/release/app-release.aab'
   ANDROID_PACKAGE_NAME: 'io.roley.demo'
 
-
 jobs:
   code-analysis-and-testing:
     name: Build & Release APK
@@ -40,6 +39,11 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
+
+      - name: set up JDK 11
+        uses: actions/setup-java@v1
+        with:
+          java-version: 11
 
       - name: Prepare key.jks & key.properties files
         env:
@@ -84,10 +88,6 @@ jobs:
         with:
           name: release-aab
           path: ${{ env.PATH_TO_AAB }}
-
-      - name: Upload to Play Store
-        run: |
-          fastlane supply --aab ${{ env.PATH_TO_AAB }} --json_key_data '${{ secrets.ANDROID_SERVICE_ACCOUNT_JSON }}' --package_name '${{ env.ANDROID_PACKAGE_NAME }}' --track 'internal'
 
 
 
