--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,15 +58,12 @@ jobs:
           echo "Convertion Completed key.jks"
         working-directory: 'android/'
 
-      - name: set up JDK 11
-        uses: actions/setup-java@v1
-        with:
-          java-version: 11
-
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: '2.10.3'
+          channel: ${{ env.FLUTTER_CHANNEL }}
+
+
       - name: Build APK
         run: flutter build apk --release
 
