--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,6 +21,11 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v3
 
+      - name: set up JDK 11
+        uses: actions/setup-java@v1
+        with:
+          java-version: 11
+
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
@@ -57,6 +62,12 @@ jobs:
           base64 --decode key.jks.base64 > key.jks
           echo "Convertion Completed key.jks"
         working-directory: 'android/'
+
+      - name: set up JDK 11
+        uses: actions/setup-java@v1
+        with:
+          java-version: 11
+
 
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
