--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,7 @@ env:
   PATH_TO_APK: 'build/app/outputs/flutter-apk/app-release.apk'
   PATH_TO_AAB: 'build/app/outputs/bundle/release/app-release.aab'
   ANDROID_PACKAGE_NAME: 'io.roley.demo'
+  PROPERTIES_PATH: "./android/key.properties"
 
 jobs:
   code-analysis-and-testing:
@@ -50,6 +51,10 @@ jobs:
           KEYSTORE_FILE: ${{ secrets.KEYSTORE_FILE }}
           KEY_PROPERTIES_FILE: ${{ secrets.KEY_PROPERTIES_FILE }}
         run: |
+          echo keyPassword=\${{ secrets.ALIAS_PASSWORD }} > ${{env.PROPERTIES_PATH}}
+          echo storePassword=\${{ secrets.KEY_PASSWORD }} >> ${{env.PROPERTIES_PATH}}
+          echo keyAlias=\${{ secrets.KEY_JKS }} >> ${{env.PROPERTIES_PATH}}
+
           echo "Convert key base64 string to a file KEYSTORE_FILE"
           echo "$KEYSTORE_FILE" >> key.jks.base64
           echo "Convertion Completed KEYSTORE_FILE"
