--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -58,7 +58,7 @@ android {
 
     signingConfigs {
         release {
-            storeFile = file('Users/macbook/Documents/Demos/roley_demo/android/key.jks')
+            storeFile = file('key.jks')
             keyAlias keystoreProperties['keyAlias']
             keyPassword keystoreProperties['keyPassword']
             // storeFile keystoreProperties['storeFile'] ? file(keystoreProperties['storeFile']) : null
