--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -93,5 +93,9 @@ jobs:
           name: release-aab
           path: ${{ env.PATH_TO_AAB }}
 
+      - name: Upload to Play Store
+        run: |
+          fastlane supply --aab ${{ env.PATH_TO_AAB }} --json_key_data '${{ secrets.ANDROID_SERVICE_ACCOUNT_JSON }}' --package_name '${{ env.ANDROID_PACKAGE_NAME }}' --track 'internal'
+
 
 
