--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -91,9 +91,8 @@ jobs:
           name: release-aab
           path: ${{ env.PATH_TO_AAB }}
 
-      - name: Upload to Play Store
-        run: |
-          fastlane supply --aab ${{ env.PATH_TO_AAB }} --json_key_data '${{ secrets.ANDROID_SERVICE_ACCOUNT_JSON }}' --package_name '${{ env.ANDROID_PACKAGE_NAME }}' --track 'internal'
-
-
-
+      - name: Upload to Play Store Using Fastlane
+        uses: maierj/fastlane-action@v1.4.0
+        with:
+          lane: closed_beta_upload_to_play_store
+          subdirectory: android
